[gd_scene load_steps=12 format=3 uid="uid://beknnb6r0k3ew"]

[ext_resource type="Script" uid="uid://dren52nmku3q4" path="res://scripts/credit_menu.gd" id="1_sileb"]
[ext_resource type="Texture2D" uid="uid://desdcpr4571tq" path="res://assets/textures/credits_screen_close_button.png" id="2_s64q8"]
[ext_resource type="Texture2D" uid="uid://67kbvksr5h2u" path="res://assets/textures/credits_screen.png" id="3_mn1b6"]

[sub_resource type="Animation" id="Animation_mn1b6"]
resource_name = "hover"
length = 0.533337
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(1, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0.175, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.175, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333)
}

[sub_resource type="Animation" id="Animation_c5b21"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, 0, 0, 0, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5b21"]
_data = {
&"RESET": SubResource("Animation_c5b21"),
&"hover": SubResource("Animation_mn1b6")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nts36"]
animation = &"hover"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c5b21"]
animation = &"RESET"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_mn1b6"]
xfade_time = 0.2
input_0/name = "Idle"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Hover"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_mn1b6"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xwfye"]
graph_offset = Vector2(-579.952, 93.3627)
nodes/Hover/node = SubResource("AnimationNodeAnimation_nts36")
nodes/Hover/position = Vector2(-320, 400)
nodes/Idle/node = SubResource("AnimationNodeAnimation_c5b21")
nodes/Idle/position = Vector2(-320, 220)
nodes/Rotation/node = SubResource("AnimationNodeTransition_mn1b6")
nodes/Rotation/position = Vector2(0, 180)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_mn1b6")
nodes/TimeScale/position = Vector2(-160, 360)
nodes/output/position = Vector2(200, 180)
node_connections = [&"Rotation", 0, &"Idle", &"Rotation", 1, &"TimeScale", &"TimeScale", 0, &"Hover", &"output", 0, &"Rotation"]

[node name="CreditMenu" type="CanvasLayer" node_paths=PackedStringArray("close_button_animation_tree")]
layer = 31
script = ExtResource("1_sileb")
close_button_animation_tree = NodePath("Control/Control/AnimationTree")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.388235)

[node name="Credit" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_mn1b6")

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 808.0
offset_top = 680.0
offset_right = 1128.0
offset_bottom = 1000.0
metadata/_edit_group_ = true

[node name="CloseButton" type="TextureButton" parent="Control/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -139.5
offset_right = 133.5
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(133.5, 28.01)
texture_normal = ExtResource("2_s64q8")
texture_pressed = ExtResource("2_s64q8")
texture_hover = ExtResource("2_s64q8")
texture_disabled = ExtResource("2_s64q8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Control"]
root_node = NodePath("../CloseButton")
libraries = {
&"": SubResource("AnimationLibrary_c5b21")
}
playback_auto_capture_transition_type = 11

[node name="AnimationTree" type="AnimationTree" parent="Control/Control"]
root_node = NodePath("../CloseButton")
tree_root = SubResource("AnimationNodeBlendTree_xwfye")
anim_player = NodePath("../AnimationPlayer")
parameters/Rotation/current_state = "Idle"
parameters/Rotation/transition_request = ""
parameters/Rotation/current_index = 0
parameters/TimeScale/scale = 0.25

[connection signal="mouse_entered" from="Control/Control/CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Control/CloseButton" to="." method="_on_close_button_mouse_exited"]
[connection signal="pressed" from="Control/Control/CloseButton" to="." method="_on_close_button_pressed"]
